--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -11,6 +11,7 @@
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
+    "nodemon": "^2.0.12",
     "sequelize": "^6.6.5",
     "sqlite3": "^5.0.2"
   }
